[package]
name = "yewdux-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
strum = "0.24"
strum_macros = "0.24"
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yewdux = { git = "https://github.com/intendednull/yewdux.git" }

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]